--- a/client/views/application/index.html
+++ b/client/views/application/index.html
@@ -3,10 +3,25 @@
 </head>
 
 <template name="index">
-   <h1> Welcome to Boilerplates Crawler</h1>
-    <ul>
-        {{#each items}}
-        <li><a href="{{url}}">{{name}}</a></li>
-        {{/each}}
-    </ul>
+    <h1> Welcome to Boilerplates Crawler</h1>
+    {{#if currentUser}}
+        <h2>Drupal 7 Reusables</h2>
+
+    <div class="row">
+        <div class="col-xs-4 col-xs-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <ul class="list-unstyled">
+                        {{#each items}}
+                        <li><a href="{{url}}">{{name}}</a></li>
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {{else}}
+    <h2>Please login or register to see the magic happend.</h2>
+    {{/if}}
 </template>
