adding repo name

--- a/client/views/application/index.html
+++ b/client/views/application/index.html
@@ -13,7 +13,7 @@
                 <div class="panel-body">
                     <ul class="list-unstyled">
                         {{#each items}}
-                        <li><a href="{{url}}">{{name}}</a></li>
+                        <li><a href="{{url}}">{{name}}</a> - {{repository}}</li>
                         {{/each}}
                     </ul>
                 </div>
